# choredom-website

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  smtp.env
data/: test.db  test.sqbpro
src/: cmd.rs  db.rs  img.rs  main.rs  structs.rs
src-frontend/: app.js  chat.css  homepage.html  index.html  login.js  main.js  post.css  post.html  post.js  signup.html  signup.js  styles.css
src-frontend/html/: cookie.html  index.html
src-frontend/static/: cookie.js  style.css
src-web/: app.js  chat.html  login.html  login.js
src-web/assets/templating/: form.html  form.js
src-web/html/: chat-nav.html  chat.html  contact.html  create.html  email.html  email_login.html  emailc.html  emailc_ver.html  error.html  homepage.html  html.html  index.html  jobs.html  login.html  myjobs.html  no-ver.html  nolog.html  nouser.html  password.html  payment.html  policies.html  post.html  profile.html  selfchats.html  settings.html  signup.html  signupnew.html  success.html  task.html  test.html  transfer.html  upload.html
src-web/static/: aeromain.css  c_aeromain.css  chat-nav.css  chat-nav.js  chat.css  chat.js  cookie.css  email.js  emailc.js  error.css  error.js  homepage.css  homepage.js  img.js  jobs.css  jobs.js  login.css  login.js  logn.css  main.css  main_aero.css  main_dark.css  main_light.css  mainaero.css  maindark.css  mainlight.css  myjobs.js  nolog.css  password.js  policies.css  post.css  post.js  profile.css  profile.js  rightclick.js  search.js  settings.css  settings.js  signout.js  signup.css  (+11 more)
src-web/static/css/: aero.css  dark.css  light.css  main.css
src/cmd/: chats.rs  jobs.rs  mod.rs  payment.rs  profile.rs  shop.rs  signup.rs
src/cmd/chats/: chat.rs  mod.rs  server.rs  session.rs
