[package]
name = "choredom-website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
actix-web = "4.5.1"
actix-web-lab = "0.20.2"
actix-files = "0.6.5"
actix-multipart = "0.6.1"
actix-rt = "2.9.0"
# actix-telepathy = "0.5.3"
# actix-cors = "0.6.4"
actix-session = "0.9.0"
actix-identity = "0.7.0"
actix-session-surrealdb = "0.1.8"
actix-web-actors = "4.3.0"

serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
# serde_yaml = "0.9.25"
# sanitize-filename = "0.5.0"

lettre = "0.11.4"
lettre_email = "0.9.4"
# rustls = "0.21.5"

rand = "0.8.5"
chrono = "0.4.34"
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["full"] }
# reqwest = "0.11.23"
anyhow = "1.0.79"
surrealdb = { version = "1.2.0" } #, features = ["kv-mem"]

# tracing = "0.1.40"
password-hash = "0.5.0"
argon2 = "0.5.3"

# env_logger = "0.10.0"
# log = "0.4.20"
# palette = "0.7.3"
rust_decimal = "1.34.3"
image = "0.24.8"
futures-util = "0.3.30"
regex = "1.10.3"
fancy-regex = "0.13.0"
# openssl = "0.10.61"

