[package]
name = "choredom-website"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.5"
actix-web = "4.13.0"
actix-web-lab = "0.24.3"
actix-files = "0.6.5"
actix-multipart = "0.7.2"
actix-rt = "2.9.0"
# actix-telepathy = "0.5.3"
# actix-cors = "0.6.4"
actix-session = "0.11.0"
actix-identity = "0.9.0"
actix-session-surrealdb = { git = "https://github.com/Pulsar-Programmer/actix-session-surrealdb"}
actix-web-actors = "4.3.0"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
# serde_yaml = "0.9.25"
# sanitize-filename = "0.5.0"

lettre = "0.11.19"
lettre_email = "0.9.4"
# rustls = "0.21.5"

rand = "0.10.0"
chrono = "0.4.44"
futures = "0.3.32"
tokio = { version = "1.49.0", features = ["full"] }
# reqwest = "0.11.23"
anyhow = "1.0.102"
surrealdb = { version = "3.0.0", features = ["protocol-ws"] } #, features = ["kv-mem"] features = ["protocol-ws", "kv-rocksdb"]
# error compiling surrealdb 1.4.0

# tracing = "0.1.40"
password-hash = "0.5.0"
argon2 = "0.5.3"

# env_logger = "0.10.0"
dotenvy = "0.15.7"
# log = "0.4.20"
# palette = "0.7.3"
rust_decimal = "1.40.0"
image = "0.25.9"
futures-util = "0.3.32"
regex = "1.12.3"
fancy-regex = "0.17.0"
surrealdb-types = "3.0.0"
# openssl = "0.10.61"

# [patch.crates-io]
# actix-session = "0.11.0"
# surrealdb = { version = "3.0.0", features = ["protocol-ws"] }